--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git y Github</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Gabriel</h2>
+    </div>
 </body>
 </html>
