--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <header>
-        <h1>Header</h1>
+        <h1>Experimento</h1>
     </header>
     <div class="container">
         <h2>Gabriel</h2>
     </div>
+    <footer>
+        <p>Experimento en nuestra rama "Experimento"</p>
+    </footer>
 </body>
 </html>
